hotfix : 댓글 주인 확인 값 추가